log_build.txt
python_bindings.cpp: In function ‘void pybind11_init_ContractionOptimizerCPP(pybind11::module_&)’:
python_bindings.cpp:15:9: error: expected primary-expression before ‘.’ token
   15 |         .def("decode", &Graph::decode);
      |         ^
python_bindings.cpp:15:32: error: ‘void Graph::decode(std::map<std::pair<unsigned int, unsigned int>, std::set<std::pair<unsigned int, unsigned int> > >&) const’ is private within this context
   15 |         .def("decode", &Graph::decode);
      |                                ^~~~~~
In file included from python_bindings.cpp:1:
graph.h:77:10: note: declared private here
   77 |     void decode(std::map<iTup, std::set<iTup>>& contrList) const;
      |          ^~~~~~
